--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     },
     "require": {
         "gplcart/gplcart": "1.0.*",
-        "gplcart/omnipay_library": "1.0.*",
+        "gplcart/omnipay_library": "1.0.*"
     },
     "autoload": {
         "psr-4": {
